todeploy-kubernetes/torrent/jackett/jackett.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: torrent
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      volumes:
        - name: jackett-config-volume
          persistentVolumeClaim:
            claimName: jackett-config-claim
      containers:
      - name: jackett
        image: linuxserver/jackett
        ports:
        - name: http
          containerPort: 9117
        volumeMounts:
          - name: jackett-config-volume
            mountPath: /config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: torrent
spec:
  ports:
  - name: http
    targetPort: 9117
    port: 80
  selector:
    app: jackett
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackettingress
  namespace: torrent
spec:
  rules:
  - host: jackett.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jackett-tls
  namespace: torrent
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jackett.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: jackett
      port: 80
  tls:
    secretName: jackett-bas-tls
